# metal_detection_gtk_app

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.c  notes.c  style.css
GUI/: gui.c  gui.h
wifi/: queue.c  queue.h  wifi.c  wifi.h
